Add image to this folder

--- a/html/js.html
+++ b/html/js.html
@@ -22,7 +22,7 @@
 
      <div class="img">
 
-          <img src="img/1-MH-BRAND-2.png" alt="offer photo">
+          <img src="../Responsive_Project/img/1-MH-BRAND-2.png" alt="offer photo"> 
 
      </div>
 
